# annas_gif_maker

./: .gitignore  README.md  pyproject.toml
src/workout_processor/: logger.py  main.py
src/workout_processor/api/: models.py  routes.py
src/workout_processor/config/: config.py
src/workout_processor/core/: audio.py  exceptions.py  gif_generator.py  movement_detection.py  processor.py  transcription.py
src/workout_processor/static/css/: styles.css
src/workout_processor/static/js/: main.js
src/workout_processor/templates/: index.html
tests/: processor.py
